@@ -1,3 +1,8 @@
+2026-01-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Rcpp/exceptions_impl.h: Combine previous and current
+	methods enabling when 'execinfo.h' is found on selected platforms
+
 2026-01-08  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Date, Version): Release 1.1.1
